--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,55 +1,78 @@
-Metrics/BlockNesting:
-  Max: 2
+AllCops:
+  Includes:
+    - 'Gemfile'
+    - 'Rakefile'
+    - 'oauth2.gemspec'
 
-Metrics/LineLength:
-  AllowURI: true
-  Enabled: false
-
-Metrics/MethodLength:
-  CountComments: false
-  Max: 15
-
-Metrics/ParameterLists:
+# Avoid long parameter lists
+ParameterLists:
   Max: 4
   CountKeywordArgs: true
 
-Lint/UnusedBlockArgument:
-  Exclude:
-    - 'spec/**/*.rb'
+MethodLength:
+  CountComments: false
+  Max: 15
 
-Style/AccessModifierIndentation:
-  EnforcedStyle: outdent
+# Avoid more than `Max` levels of nesting.
+BlockNesting:
+  Max: 3
 
-Style/CollectionMethods:
+# Align with the style guide.
+CollectionMethods:
   PreferredMethods:
-    map:      'collect'
-    reduce:   'inject'
+    collect:  'map'
+    inject:   'reduce'
     find:     'detect'
     find_all: 'select'
 
-Style/Documentation:
+# Do not force public/protected/private keyword to be indented at the same
+# level as the def keyword. My personal preference is to outdent these keywords
+# because I think when scanning code it makes it easier to identify the
+# sections of code and visually separate them. When the keyword is at the same
+# level I think it sort of blends in with the def keywords and makes it harder
+# to scan the code and see where the sections are.
+AccessModifierIndentation:
   Enabled: false
 
-Style/DotPosition:
-  EnforcedStyle: trailing
-
-Style/DoubleNegation:
+# Limit line length
+LineLength:
   Enabled: false
 
-Style/EachWithObject:
+# Disable documentation checking until a class needs to be documented once
+Documentation:
   Enabled: false
 
-Style/Encoding:
-  Enabled: false
-
-Style/HashSyntax:
+# Enforce Ruby 1.8-compatible hash syntax
+HashSyntax:
   EnforcedStyle: hash_rockets
 
-Style/Lambda:
-  Enabled: false
-
-Style/SpaceInsideHashLiteralBraces:
+# No spaces inside hash literals
+SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 
-Style/TrailingComma:
-  EnforcedStyleForMultiline: 'comma'
+# Allow dots at the end of lines
+DotPosition:
+  Enabled: false
+
+# Don't require magic comment at the top of every file
+Encoding:
+  Enabled: false
+
+# Enforce outdenting of access modifiers (i.e. public, private, protected)
+AccessModifierIndentation:
+  EnforcedStyle: outdent
+
+EmptyLinesAroundAccessModifier:
+  Enabled: true
+
+# Align ends correctly
+EndAlignment:
+  AlignWith: variable
+
+# Indentation of when/else
+CaseIndentation:
+  IndentWhenRelativeTo: end
+  IndentOneStep: false
+
+Lambda:
+  Enabled: false
